# bookworm

./: .gitignore  .mise.toml  .prettierignore  Cargo.toml  Dockerfile  README.md  eslint.config.mjs  fly.toml  package-lock.json  package.json  pnpm-lock.yaml  start.sh  tsconfig.json
.sqlx/: query-0114d8ca64b18e940cdb94aa722ee9b72b57cea3b10c673d3728e0741d1ebb3d.json  query-27b22650d30f1cb00fe575ad7d927785ba338aab472e25ec717c132e758cb58f.json  query-2cbbe961798f6c779633cdd5dd7b6f6c63c340c499c2e0f8d8bf920f8e4bf1b0.json  query-3049950c559339bd77447e542e549d3496bd5904a1af2b05cf776977480380af.json  query-3e29c2c76061c045531ce3a74e9c6f55a8396803d4b16a9e3f53892b50d4902d.json  query-43352593580accaca3f7b788ef7edcfe094e5e25fc40f5b5fff0d513ae5b9382.json  query-4454f12d7931572d46468799fd0d3df1c06f906e38f312bf9b14a3d3d609891a.json  query-45216c47ba05c28b92b6832650e24455d90e2b475c83177fb80a9c97abdffd1b.json  query-4d4614f1d4f1dffaf1b48d4248d6073609c9757c23d88e91a755344f58f9be22.json  query-5074c667acb3007ad24a797a230a42cf9ed3acf630281d3fb8c77fef7c5e54f1.json  query-5548ba2bed8465fe9b18f29dd0937d7609148a10b6cd1309bd89b5a15e30687d.json  query-55721a70603f6815ed79f58be6bce9150d405ab2ab5b0170e40a319d5e3d295e.json  query-5d697259510d326c742fa51ee0cbddc581d5d7074cbb8add2ae479257f1be135.json  query-7009f416561e61eaa019e3deb35a75e8fe3be6c26a4e6d1ac151bf9d1bcc12fb.json  query-7737f2e48d1a03ab9b9a67e67c213682187143f0a1755c1914f98baf38a039da.json  query-83dc4ed2945cbd51a957a94c6222a95bf32966326c3cad7360601e9f8b730b7e.json  (+14 more)
migrations/: 20260312000001_CreateBooks.up.sql  (+8 more)
src/: lib.rs  main.rs
(+8 files in other folders)
