[package]
name = "bookworm"
version = "0.1.0"
edition = "2024"

[lib]
name = "bookworm"
path = "src/lib.rs"

[[bin]]
name = "bookworm"
path = "src/main.rs"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
cja = { git = "https://github.com/coreyja/cja", branch = "main" }

axum = "0.8"
maud = { version = "0.27", features = ["axum"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "migrate",
    "macros",
    "uuid",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
color-eyre = "0.6"
futures = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
